Closed Bug 377750 Opened 17 years ago Closed 17 years ago

ASSERTION: Creating accessible for wrong pres shell: 'content->GetDocument() == aPresShell->GetDocument()', file nsAccessibilityService.cpp, line 1102

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: MatsPalmgren_bugz, Assigned: surkov)

References

()

Details

(Keywords: assertion)

Attachments

(2 files)

ASSERTION: Creating accessible for wrong pres shell: 'content->GetDocument() == aPresShell->GetDocument()', file nsAccessibilityService.cpp, line 1102

STEPS TO REPRODUCE
1. load URL (or any page with a DIV)
2. open DOM Inspector on the page (Ctrl+Shift+i)
3. enable "Show Accessible Nodes" in the View menu
4. open the HTML and BODY nodes
5. click on a DIV node (select it)
6. in the right pane drop down menu, choose Accessible Object

PLATFORMS AND BUILDS TESTED
Bug occurs in a SeaMonkey trunk debug build on Linux
Attached file stack + data
Alexander, could you or Sergey look at this when you have time? It involves DOMi.
Assignee: aaronleventhal → surkov.alexander
Attached patch patchSplinter Review
I guess there is no guarantee that accessilbe and focused node is placed in one pres shell.
Attachment #262208 - Flags: review?(aaronleventhal)
Status: NEW → ASSIGNED
Attachment #262208 - Flags: review?(aaronleventhal) → review+
checked in
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: