Fix for bug 377750 - assertion in DOMi when accessible object is explored, r=aaronlev