accessible/src/base/nsAccessible.cpp
@@ -1090,8 +1090,9 @@ NS_IMETHODIMP nsAccessible::GetFocusedChild(nsIAccessible **aFocusedChild)
     nsCOMPtr<nsIAccessibilityService> accService =
       do_GetService("@mozilla.org/accessibilityService;1");
     NS_ENSURE_TRUE(accService, NS_ERROR_FAILURE);
-    accService->GetAccessibleInWeakShell(gLastFocusedNode, mWeakShell, 
-                                         getter_AddRefs(focusedChild));
+
+    accService->GetAccessibleFor(gLastFocusedNode,
+                                 getter_AddRefs(focusedChild));
     if (focusedChild) {
       nsCOMPtr<nsIAccessible> focusedParentAccessible;
       focusedChild->GetParent(getter_AddRefs(focusedParentAccessible));
